# chat-overlay-widget

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  overlay.html  package-lock.json  package.json  playwright.config.ts  repowise-dashboard.bat  start.bat  stop.bat  vite.config.ts  vitest.config.ts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md
docs/: AGENT_RUNTIME_IMPLEMENTATION_PLAN.md  ANNOTATION_SYSTEM_PLAN.md  ANNOTATION_USER_GUIDE.md  CHATOVERLAY_GUIDE.md  ENHANCED_AGENT_CAPABILITIES_PLAN.md  MCP_INTEGRATION_GUIDE.md  PARALLEL_FEATURES_PLAN.md  PARALLEL_FEATURES_PLAN_V2.md  repowise-setup-template.md  user-journeys.md
docs/TEMP/: ENHANCED_AGENT_CAPABILITIES_PLAN.md
docs/build-environment/: lessons_learned.md
docs/implementation_plans/: AGENT_RUNTIME_IMPLEMENTATION_PLAN.md  ENHANCED_AGENT_CAPABILITIES_PLAN.md  PARALLEL_FEATURES_PLAN.md  PARALLEL_FEATURES_PLAN_V2.md
docs/user_guides/: ANNOTATION_USER_GUIDE.md  CHATOVERLAY_GUIDE.md  MCP_INTEGRATION_GUIDE.md
e2e/: smoke-pty-flow.spec.ts  uat-phase35.spec.ts
scripts/: cargo-build.sh  hook-event.ps1  hook-event.sh  kill-all.sh  overlay-capture.cjs  repowise-maintenance.bat  setup-defender-exclusions.ps1  tauri-dev.sh
sidecar/: dev-runner.cmd  package.json  tsconfig.json
sidecar/src/: agentEvent.test.ts  (+74 more)
src/: App.tsx  index.css  overlay_main.tsx  protocol.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
state/: plan.json
(+206 files in other folders)
